--- a/DNApp/Base.lproj/Main.storyboard
+++ b/DNApp/Base.lproj/Main.storyboard
@@ -489,6 +489,9 @@
                             <outlet property="delegate" destination="WdE-9M-lsy" id="vNB-Cv-6Kp"/>
                         </connections>
                     </tableView>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="e78-0R-iHg">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                     <connections>
                         <segue destination="yvb-gM-2TP" kind="presentation" identifier="replyCommentSegue" id="BrJ-Mm-aOR"/>
                         <segue destination="dw6-KR-CNG" kind="presentation" identifier="LoginSegue" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="A5b-Pr-XyD"/>
