--- a/DNApp/Base.lproj/Main.storyboard
+++ b/DNApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15E27e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ByY-CA-QtJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15E33e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ByY-CA-QtJ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -23,13 +23,13 @@
             <string>AvenirNext-Regular</string>
             <string>AvenirNext-Regular</string>
             <string>AvenirNext-Regular</string>
+            <string>AvenirNext-Regular</string>
             <string>AvenirNext-Medium</string>
             <string>AvenirNext-Medium</string>
             <string>AvenirNext-Medium</string>
             <string>AvenirNext-Medium</string>
             <string>AvenirNext-Regular</string>
             <string>AvenirNext-DemiBold</string>
-            <string>AvenirNext-Regular</string>
             <string>AvenirNext-Regular</string>
             <string>AvenirNext-Regular</string>
             <string>AvenirNext-Regular</string>
@@ -416,7 +416,7 @@
                                             <color key="textColor" red="0.58823529409999997" green="0.65098039220000004" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Z0-wt-B1n" customClass="SpringButton" customModule="DNApp" customModuleProvider="target">
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Z0-wt-B1n" customClass="SpringButton" customModule="DNApp" customModuleProvider="target">
                                             <rect key="frame" x="25" y="33" width="70" height="33"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="70" id="sT6-Jf-XXw"/>
@@ -432,7 +432,7 @@
                                                 <action selector="upvoteButtonDidTouch:" destination="UEP-Qs-a7S" eventType="touchUpInside" id="UiV-w1-l2k"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UjO-4H-vOI" customClass="SpringButton" customModule="DNApp" customModuleProvider="target">
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UjO-4H-vOI" customClass="SpringButton" customModule="DNApp" customModuleProvider="target">
                                             <rect key="frame" x="95" y="33" width="70" height="33"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="70" id="ihE-p2-Ifp"/>
@@ -448,36 +448,48 @@
                                                 <action selector="replyButtonDidTouch:" destination="UEP-Qs-a7S" eventType="touchUpInside" id="TD7-VR-Gjh"/>
                                             </connections>
                                         </button>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6JY-ft-HCQ" customClass="AutoTextView" customModule="DNApp" customModuleProvider="target">
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" scrollEnabled="NO" editable="NO" text="Text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6JY-ft-HCQ" customClass="AutoTextView" customModule="DNApp" customModuleProvider="target">
                                             <rect key="frame" x="35" y="69" width="550" height="38"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         </textView>
+                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NqT-P6-7l5">
+                                            <rect key="frame" x="0.0" y="0.0" width="1" height="120"/>
+                                            <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="1" id="YBy-Ur-KB1"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="fVi-Yq-I8w" secondAttribute="trailing" constant="8" id="1Id-bO-yOS"/>
-                                        <constraint firstItem="6JY-ft-HCQ" firstAttribute="leading" secondItem="pJw-kH-rrT" secondAttribute="leading" constant="35" id="2Tm-YA-3fD"/>
                                         <constraint firstItem="UjO-4H-vOI" firstAttribute="leading" secondItem="2Z0-wt-B1n" secondAttribute="trailing" id="3gE-6q-6Te"/>
                                         <constraint firstItem="fVi-Yq-I8w" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" constant="8" id="4Vx-vj-87q"/>
+                                        <constraint firstItem="6JY-ft-HCQ" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="leading" id="89N-a4-oQ6"/>
+                                        <constraint firstItem="NqT-P6-7l5" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" id="8f0-ZU-NZk"/>
                                         <constraint firstItem="IBx-02-6ji" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" constant="8" id="9Ai-up-BjD"/>
                                         <constraint firstItem="6JY-ft-HCQ" firstAttribute="top" secondItem="UjO-4H-vOI" secondAttribute="bottom" constant="3" id="9eu-2U-1xI"/>
                                         <constraint firstItem="JEo-nj-IOw" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" constant="8" id="9zf-7T-jdi"/>
+                                        <constraint firstItem="IBx-02-6ji" firstAttribute="leading" secondItem="NqT-P6-7l5" secondAttribute="trailing" constant="9" id="CzM-2g-OzQ"/>
                                         <constraint firstItem="UjO-4H-vOI" firstAttribute="top" secondItem="JEo-nj-IOw" secondAttribute="bottom" constant="3" id="DhJ-33-0yC"/>
-                                        <constraint firstItem="2Z0-wt-B1n" firstAttribute="leading" secondItem="pJw-kH-rrT" secondAttribute="leading" constant="25" id="Dkm-0c-B6J"/>
                                         <constraint firstAttribute="bottom" secondItem="6JY-ft-HCQ" secondAttribute="bottom" constant="11" id="K0J-EL-04n"/>
                                         <constraint firstItem="IBx-02-6ji" firstAttribute="leading" secondItem="pJw-kH-rrT" secondAttribute="leading" constant="10" id="Wze-65-X9I"/>
                                         <constraint firstAttribute="trailing" secondItem="JEo-nj-IOw" secondAttribute="trailing" constant="45" id="YgK-pi-B1A"/>
                                         <constraint firstItem="2Z0-wt-B1n" firstAttribute="top" secondItem="JEo-nj-IOw" secondAttribute="bottom" constant="3" id="bRT-Cw-TeP"/>
                                         <constraint firstItem="JEo-nj-IOw" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="trailing" constant="5" id="i6X-WU-PIY"/>
                                         <constraint firstAttribute="trailing" secondItem="6JY-ft-HCQ" secondAttribute="trailing" constant="15" id="qAg-Oz-Rd1"/>
+                                        <constraint firstAttribute="bottom" secondItem="NqT-P6-7l5" secondAttribute="bottom" id="v8J-SL-pN1"/>
+                                        <constraint firstItem="2Z0-wt-B1n" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="leading" id="vjn-pX-Obn"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <inset key="separatorInset" minX="35" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="authorLabel" destination="JEo-nj-IOw" id="oGW-5O-HGC"/>
                                     <outlet property="avatarImageView" destination="IBx-02-6ji" id="o1N-dR-JQL"/>
+                                    <outlet property="avatarLeftConstraint" destination="Wze-65-X9I" id="Vzj-DY-CUy"/>
                                     <outlet property="commentTextView" destination="6JY-ft-HCQ" id="qrg-QE-31l"/>
+                                    <outlet property="indentView" destination="NqT-P6-7l5" id="wVQ-SF-SrJ"/>
                                     <outlet property="replyButton" destination="UjO-4H-vOI" id="CHr-F0-bSh"/>
                                     <outlet property="timeLabel" destination="fVi-Yq-I8w" id="hhA-MN-kOD"/>
                                     <outlet property="upvoteButton" destination="2Z0-wt-B1n" id="IMd-dY-sot"/>
