--- a/DNApp/Base.lproj/Main.storyboard
+++ b/DNApp/Base.lproj/Main.storyboard
@@ -417,7 +417,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Z0-wt-B1n" customClass="SpringButton" customModule="DNApp" customModuleProvider="target">
-                                            <rect key="frame" x="10" y="33" width="70" height="33"/>
+                                            <rect key="frame" x="25" y="33" width="70" height="33"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="70" id="sT6-Jf-XXw"/>
                                                 <constraint firstAttribute="height" constant="33" id="u1l-eM-awM"/>
@@ -433,7 +433,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UjO-4H-vOI" customClass="SpringButton" customModule="DNApp" customModuleProvider="target">
-                                            <rect key="frame" x="80" y="33" width="70" height="33"/>
+                                            <rect key="frame" x="95" y="33" width="70" height="33"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="70" id="ihE-p2-Ifp"/>
                                                 <constraint firstAttribute="height" constant="33" id="p9D-cc-fqv"/>
@@ -449,7 +449,7 @@
                                             </connections>
                                         </button>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6JY-ft-HCQ" customClass="AutoTextView" customModule="DNApp" customModuleProvider="target">
-                                            <rect key="frame" x="10" y="69" width="575" height="38"/>
+                                            <rect key="frame" x="35" y="69" width="575" height="38"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -466,7 +466,7 @@
                                         <constraint firstAttribute="trailing" secondItem="fVi-Yq-I8w" secondAttribute="trailing" constant="8" id="1Id-bO-yOS"/>
                                         <constraint firstItem="UjO-4H-vOI" firstAttribute="leading" secondItem="2Z0-wt-B1n" secondAttribute="trailing" id="3gE-6q-6Te"/>
                                         <constraint firstItem="fVi-Yq-I8w" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" constant="8" id="4Vx-vj-87q"/>
-                                        <constraint firstItem="6JY-ft-HCQ" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="leading" id="89N-a4-oQ6"/>
+                                        <constraint firstItem="6JY-ft-HCQ" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="leading" constant="25" id="89N-a4-oQ6"/>
                                         <constraint firstItem="NqT-P6-7l5" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" id="8f0-ZU-NZk"/>
                                         <constraint firstItem="IBx-02-6ji" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" constant="8" id="9Ai-up-BjD"/>
                                         <constraint firstItem="6JY-ft-HCQ" firstAttribute="top" secondItem="UjO-4H-vOI" secondAttribute="bottom" constant="3" id="9eu-2U-1xI"/>
@@ -478,9 +478,9 @@
                                         <constraint firstAttribute="trailing" secondItem="JEo-nj-IOw" secondAttribute="trailing" constant="45" id="YgK-pi-B1A"/>
                                         <constraint firstItem="2Z0-wt-B1n" firstAttribute="top" secondItem="JEo-nj-IOw" secondAttribute="bottom" constant="3" id="bRT-Cw-TeP"/>
                                         <constraint firstItem="JEo-nj-IOw" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="trailing" constant="5" id="i6X-WU-PIY"/>
-                                        <constraint firstAttribute="trailing" secondItem="6JY-ft-HCQ" secondAttribute="trailing" constant="15" id="qAg-Oz-Rd1"/>
+                                        <constraint firstAttribute="trailing" secondItem="6JY-ft-HCQ" secondAttribute="trailing" constant="-10" id="qAg-Oz-Rd1"/>
                                         <constraint firstAttribute="bottom" secondItem="NqT-P6-7l5" secondAttribute="bottom" id="v8J-SL-pN1"/>
-                                        <constraint firstItem="2Z0-wt-B1n" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="leading" id="vjn-pX-Obn"/>
+                                        <constraint firstItem="2Z0-wt-B1n" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="leading" constant="15" id="vjn-pX-Obn"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <inset key="separatorInset" minX="35" minY="0.0" maxX="0.0" maxY="0.0"/>
